PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016, PHP 7.1.0RC4

- Core:
  . Implemented RFC: get_class() disallow null parameter. Passing null to
    get_class() now generates a warning, rather than returning the calling
    class scope.

- Date:
  . Fixed bug #45554 (Inconsistent behavior of the u format char). (Derick)
  . Fixed bug #48225 (DateTime parser doesn't set microseconds for "now").
    (Derick)
  . Fixed bug #52514 (microseconds are missing in DateTime class). (Derick)
  . Fixed bug #52519 (microseconds in DateInterval are missing). (Derick)
  . Fixed bug #60089 (DateTime::createFromFormat() U after u nukes microtime).
    (Derick)
  . Fixed bug #64887 (Allow DateTime modification with subsecond items).
    (Derick)
  . Fixed bug #68506 (General DateTime improvments needed for microseconds to
    become useful). (Derick)
  . Fixed bug #73109 (timelib_meridian doesn't parse dots correctly). (Derick)
  . Fixed bug #73247 (DateTime constructor does not initialise microseconds
    property). (Derick)

- GD:
  . Fixed bug #73213 (Integer overflow in imageline() with antialiasing). (cmb)
  . Fixed bug #73272 (imagescale() is not affected by, but affects
    imagesetinterpolation()). (cmb)
  . Fixed bug #73279 (Integer overflow in gdImageScaleBilinearPalette()). (cmb)

- Session:
  . Fixed bug #73273 (session_unset() empties values from all variables in which
    is $_session stored). (Nikita)

- SOAP:
  . Fixed bug #73037 (SoapServer reports Bad Request when gzipped). (Anatol)

- Standard:
  . Fixed bug #73203 (passing additional_parameters causes mail to fail). (cmb)

29 Sep 2016, PHP 7.1.0RC3

- Core:
  . Fixed bug #73156 (segfault on undefined function). (Dmitry)
  . Fixed bug #73163 (PHP hangs if error handler throws while accessing undef
    const in default value). (Nikita)